# mxdbg

./: .gitignore  README.en.md  README.md  README.zh.md  mkdocs.yml  pubdoc.py  pubpackage.py  pyproject.toml  sdkconfig  tag_release.py
docs/: dev_howto.md  index.md  releases.md  user_manual.md
espidf/: .clang-format  CMakeLists.txt  sdkconfig
espidf/main/: CMakeLists.txt  idf_component.yml  main.c  mxdbg.h  paw3395.h  paw33xx.c  soft_i2c.c  soft_i2c.h
examples/: Motor_Controller_MXDBG.py  paw3311dw.py
main/: main.c  mxdbg.h  paw3311dw.c
python/: mxdbg.ipynb  mxdbg.py  mxdbg.toml  paw3311dw.py  test_mxdbg.py  ts102.py
src/mxESP32Debugger/: __version__.py  debugger.py  mxdbg.toml
src/mxESP32Debugger/cli/: main_cli.py
src/mxESP32Debugger/examples/: Motor_Controller_MXDBG.py  mxdbg.ipynb  paw3311dw.py
src/mxESP32Debugger/examples/adxl345/: Cube3D.py  CubeMove.py  adxl345.toml  main.ipynb  main.py
src/mxESP32Debugger/examples/coco_integrated_test_board/: main.ipynb
src/mxESP32Debugger/examples/gc6153/: gc6153.toml  run.ipynb
src/mxESP32Debugger/examples/jhm120x/: COCO_Resistance_Measure.py
src/mxESP32Debugger/examples/oppo_ots/: mot6016.toml  mot6016_1.toml  test.ipynb
src/mxESP32Debugger/examples/ots/: mxdbg.ipynb
src/mxESP32Debugger/examples/ots_matrix/: OTS Matrix.py  matrix.py  mot6010_config.toml
src/mxESP32Debugger/examples/paw3395/: paw3395.py  paw3395.toml
src/mxESP32Debugger/examples/paw33xx/: paw3311.toml  paw3395.toml  paw33xx.py  paw33xx_gui.py
src/mxdbg/: __version__.py  mxdbg.py
src/mxdbg/cli/: __init__.py  main_cli.py
src/mxdbg/examples/: Motor_Controller_MXDBG.py  mxdbg.ipynb  ts102.py
tests/: test_mxdbg.py
